# DIS

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
Exercise1/: insertIntoBeispiel.sql
Exercise2/: Dockerfile  docker-compose.yml
Exercise2/Query/: create_real estate_tables.sql
Exercise2/scr/: main.py
pdfs/exercise3/: notes.md
scr/Query/exercise2/: create_estate_example_tables_query.sql  inserting_values_query.sql
scr/exercise2/: auth.py  contract_manager.py  db_connection_manager.py  estate_manager.py  main.py  person_manager.py
scr/exercise3/: main.py  main_with_locking.py
scr/exercise4/: main.py
scr/exercise6/: main.ipynb
scr/exercise7/: frequent_itemsets_with_support.txt  main.py  main2.py
scr/utils/: db_helpers.py
